updated html with the pictures

--- a/photosite.html
+++ b/photosite.html
@@ -5,8 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="photos.css">
-    <title>Document</title>
+    <title>Big Five</title>
+
+    <nav>Big/Five</nav>
+
+    <!-- Ansie Potgieter -->
+    <!-- Lion -->
+    <img
+        src="https://images.unsplash.com/photo-1591709024354-3bd817aba4f8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80"><img
+        src="https://images.unsplash.com/photo-1590668468552-d87c3a011afb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2072&q=80"><img
+        src="https://images.unsplash.com/photo-1591100749199-e9bb30ea7f2b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2072&q=80">
+
+    <!-- Elephant -->
+    <img
+        src="https://images.unsplash.com/photo-1652093482335-b87e0bfc6f3d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"><img
+        src="https://images.unsplash.com/photo-1652093481608-cbccad999eb9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"><img
+        src="https://images.unsplash.com/photo-1652093481556-2665651a7644?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80">
+
+
 </head>
 
 <body>
