--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         src="https://images.unsplash.com/photo-1652093481608-cbccad999eb9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"><img
         src="https://images.unsplash.com/photo-1652093481556-2665651a7644?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80">
 
-
+    <!-- Rhinoceros -->
     <img src="https://images.unsplash.com/photo-1702285225352-d91d1735bdb1?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
         alt="" srcset=""><img
         src="https://images.unsplash.com/photo-1702285225392-52d546c86454?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
@@ -34,6 +34,7 @@
         src="https://images.unsplash.com/photo-1547027086-21cb487af196?q=80&w=1814&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
         alt="">
 
+    <!-- Buffalo -->
     <img src="https://images.unsplash.com/photo-1535075957860-52e6b99e348f?q=80&w=2052&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
         alt="" srcset=""><img
         src="https://images.unsplash.com/photo-1603696861627-db79cf52fecb?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
