--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
         alt="" srcset=""><img
         src="https://images.unsplash.com/photo-1571566834017-471126f4e366?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
         alt="">
+
+    <!-- leopard -->
+    <img src="https://images.unsplash.com/photo-1586041247337-cbf8401140d4?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        alt="" srcset=""><img
+        src="https://images.unsplash.com/photo-1605132410660-f388de10e778?q=80&w=1822&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        alt="" srcset=""><img
+        src="https://images.unsplash.com/photo-1517689398317-09b78ac8908d?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        alt="">
 </head>
 
 <body>
